@@ -15,11 +15,10 @@ package org.apache.commons.io.input;
 
 import static org.apache.commons.io.IOUtils.EOF;
 
+import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
 import java.nio.ByteBuffer;
 import java.nio.channels.FileChannel;
 import java.nio.file.Path;
@@ -27,48 +26,102 @@ import java.nio.file.StandardOpenOption;
 import java.util.Objects;
 
 import org.apache.commons.io.IOUtils;
+import org.apache.commons.io.build.AbstractStreamBuilder;
 
 /**
- * {@link InputStream} implementation which uses direct buffer to read a file to avoid extra copy of data between Java
- * and native memory which happens when using {@link java.io.BufferedInputStream}. Unfortunately, this is not something
- * already available in JDK, {@code sun.nio.ch.ChannelInputStream} supports reading a file using NIO, but does not
- * support buffering.
+ * {@link InputStream} implementation which uses direct buffer to read a file to avoid extra copy of data between Java and native memory which happens when
+ * using {@link BufferedInputStream}. Unfortunately, this is not something already available in JDK, {@code sun.nio.ch.ChannelInputStream} supports
+ * reading a file using NIO, but does not support buffering.
  * <p>
- * This class was ported and adapted from Apache Spark commit 933dc6cb7b3de1d8ccaf73d124d6eb95b947ed19 where it was
- * called {@code NioBufferedFileInputStream}.
+ * To build an instance, use {@link Builder}.
+ * </p>
+ * <p>
+ * This class was ported and adapted from Apache Spark commit 933dc6cb7b3de1d8ccaf73d124d6eb95b947ed19 where it was called {@code NioBufferedFileInputStream}.
  * </p>
  *
+ * @see Builder
  * @since 2.9.0
  */
-@SuppressWarnings("restriction")
 public final class BufferedFileChannelInputStream extends InputStream {
+
+    // @formatter:off
+    /**
+     * Builds a new {@link BufferedFileChannelInputStream}.
+     *
+     * <p>
+     * Using File IO:
+     * </p>
+     * <pre>{@code
+     * BufferedFileChannelInputStream s = BufferedFileChannelInputStream.builder()
+     *   .setFile(file)
+     *   .setBufferSize(4096)
+     *   .get();}
+     * </pre>
+     * <p>
+     * Using NIO Path:
+     * </p>
+     * <pre>{@code
+     * BufferedFileChannelInputStream s = BufferedFileChannelInputStream.builder()
+     *   .setPath(path)
+     *   .setBufferSize(4096)
+     *   .get();}
+     * </pre>
+     *
+     * @see #get()
+     * @since 2.12.0
+     */
+    // @formatter:on
+    public static class Builder extends AbstractStreamBuilder<BufferedFileChannelInputStream, Builder> {
+
+        /**
+         * Builds a new {@link BufferedFileChannelInputStream}.
+         * <p>
+         * You must set input that supports {@link #getInputStream()}, otherwise, this method throws an exception.
+         * </p>
+         * <p>
+         * This builder use the following aspects:
+         * </p>
+         * <ul>
+         * <li>{@link #getInputStream()}</li>
+         * <li>{@link #getBufferSize()}</li>
+         * </ul>
+         *
+         * @return a new instance.
+         * @throws IllegalStateException         if the {@code origin} is {@code null}.
+         * @throws UnsupportedOperationException if the origin cannot be converted to a {@link Path}.
+         * @throws IOException If an I/O error occurs
+         * @see #getPath()
+         * @see #getBufferSize()
+         */
+        @Override
+        public BufferedFileChannelInputStream get() throws IOException {
+            return new BufferedFileChannelInputStream(getPath(), getBufferSize());
+        }
+
+    }
+
+    /**
+     * Constructs a new {@link Builder}.
+     *
+     * @return a new {@link Builder}.
+     * @since 2.12.0
+     */
+    public static Builder builder() {
+        return new Builder();
+    }
 
     private final ByteBuffer byteBuffer;
 
     private final FileChannel fileChannel;
-
-    private static final Class<?> DIRECT_BUFFER_CLASS = getDirectBufferClass();
-
-    private static Class<?> getDirectBufferClass() {
-        Class<?> res = null;
-        try {
-            res = Class.forName("sun.nio.ch.DirectBuffer");
-        } catch (final IllegalAccessError | ClassNotFoundException ignored) {
-            // ignored
-        }
-        return res;
-    }
-
-    private static boolean isDirectBuffer(final Object object) {
-        return DIRECT_BUFFER_CLASS != null && DIRECT_BUFFER_CLASS.isInstance(object);
-    }
 
     /**
      * Constructs a new instance for the given File.
      *
      * @param file The file to stream.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
+    @Deprecated
     public BufferedFileChannelInputStream(final File file) throws IOException {
         this(file, IOUtils.DEFAULT_BUFFER_SIZE);
     }
@@ -76,12 +129,14 @@ public final class BufferedFileChannelInputStream extends InputStream {
     /**
      * Constructs a new instance for the given File and buffer size.
      *
-     * @param file The file to stream.
-     * @param bufferSizeInBytes buffer size.
+     * @param file       The file to stream.
+     * @param bufferSize buffer size.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
-    public BufferedFileChannelInputStream(final File file, final int bufferSizeInBytes) throws IOException {
-        this(file.toPath(), bufferSizeInBytes);
+    @Deprecated
+    public BufferedFileChannelInputStream(final File file, final int bufferSize) throws IOException {
+        this(file.toPath(), bufferSize);
     }
 
     /**
@@ -89,7 +144,9 @@ public final class BufferedFileChannelInputStream extends InputStream {
      *
      * @param path The path to stream.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
+    @Deprecated
     public BufferedFileChannelInputStream(final Path path) throws IOException {
         this(path, IOUtils.DEFAULT_BUFFER_SIZE);
     }
@@ -97,93 +154,55 @@ public final class BufferedFileChannelInputStream extends InputStream {
     /**
      * Constructs a new instance for the given Path and buffer size.
      *
-     * @param path The path to stream.
-     * @param bufferSizeInBytes buffer size.
+     * @param path       The path to stream.
+     * @param bufferSize buffer size.
      * @throws IOException If an I/O error occurs
+     * @deprecated Use {@link #builder()}, {@link Builder}, and {@link Builder#get()}
      */
-    public BufferedFileChannelInputStream(final Path path, final int bufferSizeInBytes) throws IOException {
+    @Deprecated
+    public BufferedFileChannelInputStream(final Path path, final int bufferSize) throws IOException {
         Objects.requireNonNull(path, "path");
         fileChannel = FileChannel.open(path, StandardOpenOption.READ);
-        byteBuffer = ByteBuffer.allocateDirect(bufferSizeInBytes);
+        byteBuffer = ByteBuffer.allocateDirect(bufferSize);
         byteBuffer.flip();
     }
 
     @Override
     public synchronized int available() throws IOException {
+        if (!fileChannel.isOpen()) {
+            return 0;
+        }
+        if (!refill()) {
+            return 0;
+        }
         return byteBuffer.remaining();
     }
 
     /**
-     * Attempts to clean up a ByteBuffer if it is direct or memory-mapped. This uses an *unsafe* Sun API that will cause
-     * errors if one attempts to read from the disposed buffer. However, neither the bytes allocated to direct buffers
-     * nor file descriptors opened for memory-mapped buffers put pressure on the garbage collector. Waiting for garbage
-     * collection may lead to the depletion of off-heap memory or huge numbers of open files. There's unfortunately no
-     * standard API to manually dispose of these kinds of buffers.
+     * Attempts to clean up a ByteBuffer if it is direct or memory-mapped. This uses an *unsafe* Sun API that will cause errors if one attempts to read from the
+     * disposed buffer. However, neither the bytes allocated to direct buffers nor file descriptors opened for memory-mapped buffers put pressure on the garbage
+     * collector. Waiting for garbage collection may lead to the depletion of off-heap memory or huge numbers of open files. There's unfortunately no standard
+     * API to manually dispose of these kinds of buffers.
      *
      * @param buffer the buffer to clean.
      */
     private void clean(final ByteBuffer buffer) {
-        if (isDirectBuffer(buffer)) {
+        if (buffer.isDirect()) {
             cleanDirectBuffer(buffer);
         }
     }
 
     /**
-     * In Java 8, the type of DirectBuffer.cleaner() was sun.misc.Cleaner, and it was possible to access the method
-     * sun.misc.Cleaner.clean() to invoke it. The type changed to jdk.internal.ref.Cleaner in later JDKs, and the
-     * .clean() method is not accessible even with reflection. However sun.misc.Unsafe added a invokeCleaner() method in
-     * JDK 9+ and this is still accessible with reflection.
+     * In Java 8, the type of {@code sun.nio.ch.DirectBuffer.cleaner()} was {@code sun.misc.Cleaner}, and it was possible to access the method
+     * {@code sun.misc.Cleaner.clean()} to invoke it. The type changed to {@code jdk.internal.ref.Cleaner} in later JDKs, and the {@code clean()} method is not
+     * accessible even with reflection. However {@code sun.misc.Unsafe} added an {@code invokeCleaner()} method in JDK 9+ and this is still accessible with
+     * reflection.
      *
      * @param buffer the buffer to clean. must be a DirectBuffer.
      */
     private void cleanDirectBuffer(final ByteBuffer buffer) {
-        //
-        // Ported from StorageUtils.scala.
-        //
-//      private val bufferCleaner: DirectBuffer => Unit =
-//      if (SystemUtils.isJavaVersionAtLeast(JavaVersion.JAVA_9)) {
-//        val cleanerMethod =
-//          Utils.classForName("sun.misc.Unsafe").getMethod("invokeCleaner", classOf[ByteBuffer])
-//        val unsafeField = classOf[Unsafe].getDeclaredField("theUnsafe")
-//        unsafeField.setAccessible(true)
-//        val unsafe = unsafeField.get(null).asInstanceOf[Unsafe]
-//        buffer: DirectBuffer => cleanerMethod.invoke(unsafe, buffer)
-//      } else {
-//        val cleanerMethod = Utils.classForName("sun.misc.Cleaner").getMethod("clean")
-//        buffer: DirectBuffer => {
-//          // Careful to avoid the return type of .cleaner(), which changes with JDK
-//          val cleaner: AnyRef = buffer.cleaner()
-//          if (cleaner != null) {
-//            cleanerMethod.invoke(cleaner)
-//          }
-//        }
-//      }
-        //
-        final String specVer = System.getProperty("java.specification.version");
-        if ("1.8".equals(specVer)) {
-            // On Java 8, but also compiles on Java 11.
-            try {
-              final Class<?> clsCleaner = Class.forName("sun.misc.Cleaner");
-              final Method cleanerMethod = DIRECT_BUFFER_CLASS.getMethod("cleaner");
-              final Object cleaner = cleanerMethod.invoke(buffer);
-              if (cleaner != null) {
-                  final Method cleanMethod = clsCleaner.getMethod("clean");
-                  cleanMethod.invoke(cleaner);
-              }
-            } catch (final ReflectiveOperationException e) {
-                throw new IllegalStateException(e);
-            }
-        } else {
-            // On Java 9 and up, but compiles on Java 8.
-            try {
-                final Class<?> clsUnsafe = Class.forName("sun.misc.Unsafe");
-                final Method cleanerMethod = clsUnsafe.getMethod("invokeCleaner", ByteBuffer.class);
-                final Field unsafeField = clsUnsafe.getDeclaredField("theUnsafe");
-                unsafeField.setAccessible(true);
-                cleanerMethod.invoke(unsafeField.get(null), buffer);
-            } catch (final ReflectiveOperationException e) {
-                throw new IllegalStateException(e);
-            }
+        if (ByteBufferCleaner.isSupported()) {
+            ByteBufferCleaner.clean(buffer);
         }
     }
 
@@ -221,8 +240,10 @@ public final class BufferedFileChannelInputStream extends InputStream {
      * Checks whether data is left to be read from the input stream.
      *
      * @return true if data is left, false otherwise
+     * @throws IOException if an I/O error occurs.
      */
     private boolean refill() throws IOException {
+        Input.checkOpen(fileChannel.isOpen());
         if (!byteBuffer.hasRemaining()) {
             byteBuffer.clear();
             int nRead = 0;
